# utsma_vision

./: .gitmodules  README.md
camera_clustering/: .gitignore  CMakeLists.txt  README.md
camera_clustering/include/: detect_cone.hpp  euc_dist_seg.hpp  pcl_k_means.hpp
camera_clustering/src/: CMakeLists.txt  detect_cone.cpp  euc_dist_seg.cpp  pcl_k_means.cpp
camera_clustering/test/: CMakeLists.txt  algo_test.cpp
camera_driver/zed2i/: README.md
camera_vision_ros2wrap/: package.xml  setup.cfg  setup.py
camera_vision_ros2wrap/camera_vision_ros2wrap/: camera_vision_node.py
docker/yolo_vision/: readme.md
docker/yolo_vision/zed_yolo/: Dockerfile.yolo  docker-run-rs1.sh  modify_quaternions.py  new-terminal.sh
docker/yolo_vision/zed_yolo/src/image_publisher/: package.xml  setup.cfg  setup.py
docker/yolo_vision/zed_yolo/src/image_publisher/image_publisher/: publisher.py
docker/yolo_vision/zed_yolo/src/zed_yolo_pkg/: package.xml  setup.cfg  setup.py
docker/yolo_vision/zed_yolo/src/zed_yolo_pkg/zed_yolo_pkg/: detection.py
docker/zed2i_l4t_LONG/: Dockerfile.zed(OG)  build_image.sh  entrypoint.sh  run_image.sh  zed2i-l4t-LONG.Dockerfile
model_inference/: README.md
model_inference/coord_light_yolov5/: package.xml  setup.cfg  setup.py
model_inference/coord_light_yolov5/scripts/: coord_light_yolov5_inference.py
model_inference/deeplabv3/: CMakeLists.txt
model_inference/deeplabv3/cmake/: model_inferenceConfig.cmake.in
model_inference/deeplabv3/include/model_inference/: predict.hpp
model_inference/deeplabv3/scratch/: CMakeLists_no_ros.txt  CMakeLists_non_catkin.txt  package_no_ros.xml  predict_main_old.cpp  predict_old.cpp
model_inference/deeplabv3/scripts/: model_inference.py
model_inference/deeplabv3/src/: predict.cpp  predict_demo.cpp
my_robot_interfaces/: CMakeLists.txt  package.xml
pkg_template/: CMakeLists.txt  README.md  package.xml
wiki/: DOCKER_ZED_ROS2_WRAPPER.md
yolo_zed_pkg/: package.xml  setup.cfg  setup.py
yolo_zed_pkg/yolo_zed_pkg/: rosdetect.py
yolo_zed_pkg/yolo_zed_pkg/yolov5/: Zed.py
